[project]
name = "shopify-card-checker-api"
version = "1.0.0"
description = "Flask-based API for checking card validity through Shopify checkout"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "gunicorn>=21.2.0",
    "nest-asyncio>=1.5.8",
    "aiohttp>=3.9.1",
    "beautifulsoup4>=4.12.0",
    "brotli>=1.1.0",
    "fake-useragent>=1.4.0",
    "faker>=22.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "urllib3>=2.1.0",
    "validators>=0.22.0",
]
